# SPH

./: .gitignore
SPH/: CMakeLists.txt  Kelvin-Helmholtz Instability.cpp  SPH.cbp  SPH.depend  SPH.layout
SPH/SPH crutched version/SPH crutched version/: SPH crutched version.cbp  SPH crutched version.depend  SPH crutched version.layout  SPH.cpp
SPH/SPH crutched version/SPH crutched version/SPH crutched library/: The Great Crutch.hpp
SPH/SPH library/: allincluded.cpp  allincluded.hpp
SPH/SPH library/Classes&Structures/: Liquid.hpp  Particles.hpp  particle.cpp  ppair.cpp  ppair.hpp
SPH/SPH library/Classes&Structures/Additional functions/: getParticles.cpp
SPH/SPH library/Constructor/: Constructor.cpp  Liquid_Constructor.cpp  Particles_Constructor.cpp
SPH/SPH library/Constructor/Additional functions/: randomizer.cpp  randomizer.hpp
SPH/SPH library/Solver/: Ker.hpp  Liquid.cpp  Ro.hpp  SPHfunc.cpp  Solver.cpp  Starting.cpp  kerfunc.cpp
SPH/SPH library/Solver/Additional functions/: distancefunc.cpp  distancefunc.hpp  reflector.cpp  scalar.cpp  scalar.hpp
SPH/SPH library/Visualizer/: Environment Parameters.cpp  Visualizer.cpp
